--- a/pag2.html
+++ b/pag2.html
@@ -176,8 +176,9 @@ Teste de centralização
             </tbody>
         </center>
     </table>
-    </form>
     
+    </form>
+    <button class=" botao "sonclick="history.back()">Voltar</button>
 </center>       
     </div>
 
@@ -187,3 +188,4 @@ Teste de centralização
 
 </body>
 </html>
+
