--- a/pag2.html
+++ b/pag2.html
@@ -178,7 +178,7 @@ Teste de centralização
     </table>
     
     </form>
-    <button class=" botao "sonclick="history.back()">Voltar</button>
+    <button class=" botao"onclick="history.back()">Voltar</button>
 </center>       
     </div>
 
@@ -188,4 +188,5 @@ Teste de centralização
 
 </body>
 </html>
+
 
